--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "prismjs": "^1.16.0",
+    "vue": "^2.6.10",
+    "vue-nav-tabs": "^0.5.7",
+    "vue-prism-editor": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
